--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,6 @@
-<h1> {{pageTitle}} </h1>
+<header>
+	<h1> {{pageTitle}} </h1>
+	<p><a href="/"> Home </a> </a>
+	<p><a href="/about"> About </a> </a>
+	<p><a href="/projects"> Projects </a> </a>
+</header>
